<resources>
    <string name="app_name">SpotifyApi</string>

    //login
    <string name="enter_account_spotify">Entre com sua conta Spotify</string>
    <string name="enter_button">Entrar</string>

    //top artists
    <string name="top_artists">Top Artistas</string>
    <string name="photo_profile">foto do perfil</string>
    <string name="artist_name">Nome do Artista</string>
    <string name="artist_image">imagem do artista</string>

    //profile
    <string name="image_profile">imagem do perfil do usuario</string>
    <string name="name_profile_spotify">Nome de Perfil</string>
    <string name="close_app_button">Sair</string>

    //album
    <string name="back_button">botão de voltar</string>
    <string name="image_profile_artist">imagem perfil do artista</string>
    <string name="image_album">imagem de capa do album</string>
    <string name="album_name">Nome do Album</string>
    <string name="release_date">Release Date</string>
    <string name="error_msg_search_albums">Erro ao buscar álbuns</string>

    //playlist
    <string name="create_playlist_button">Criar Playlist</string>
    <string name="no_playlist_avaiable">Nenhuma playlist disponível</string>
    <string name="my_playlists">Minhas Playlists</string>
    <string name="image_playlist">imagem de capa da playlist</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="owner">Owner</string>

    //create playlist
    <string name="close_button">Fechar</string>
    <string name="insert_name_your_playlist_title">Por favor, insira um nome para a playlist</string>
    <string name="insert_name_your_playlist_title_description">Dê um nome a sua playlist</string>
    <string name="insert_name_your_playlist">Minha Playlist #1</string>
    <string name="create_your_playlist_button">Criar</string>

    <string name="artists">Artistas</string>
    <string name="playlists">Playlists</string>
    <string name="profile">Perfil</string>

    //toast
    <string name="playlist_created_success">Playlist criada com sucesso!</string>
    <string name="playlist_created_success_with_name">Playlist %s criada com sucesso!</string>
    <string name="error_create_playlist">Erro ao criar playlist</string>
    <string name="error_internet">Modo offline: Não é possível criar playlists</string>
    <string name="auth_error">Falha na autenticação</string>
    <string name="error_message">Erro: %s - %s</string>
    <string name="offline_mode">Modo offline</string>
    <string name="error_message_get_token">Erro ao obter token</string>
    <string name="error_message_save_token">"Erro ao salvar tokens"</string>
    <string name="error_message_direct_code_not_found">Código de autorização não encontrado</string>
    <string name="error_message_search_playlists">Erro ao buscar playlists</string>
    <string name="error_message_search_profile">Erro ao buscar perfil do usuário</string>
</resources>