<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_8"
    tools:showIn="@layout/activity_playlist">

    <ImageView
        android:id="@+id/playlistImageView"
        android:layout_width="@dimen/margin_72"
        android:layout_height="@dimen/margin_72"
        android:background="@color/black"
        android:contentDescription="@string/image_playlist"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_spotify_full"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/playlistImageView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/playlistNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/playlist_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14" />

        <TextView
            android:id="@+id/playlistOwnerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/owner"
            android:textColor="@color/white"
            android:textSize="@dimen/text_12" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
