<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="app.ui.album.AlbumsFragment">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="@dimen/margin_32"
        android:layout_height="@dimen/margin_32"
        android:layout_marginStart="@dimen/margin_24"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_back_button"
        app:layout_constraintBottom_toBottomOf="@id/albumPostImageView"
        app:layout_constraintEnd_toStartOf="@id/albumTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/albumPostImageView" />

    <TextView
        android:id="@+id/albumTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/top_artists"
        android:textColor="@color/white"
        android:textSize="@dimen/text_16"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/albumPostImageView"
        app:layout_constraintEnd_toStartOf="@id/albumPostImageView"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintTop_toTopOf="@id/albumPostImageView" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/albumPostImageView"
        android:layout_width="@dimen/margin_64"
        android:layout_height="@dimen/margin_64"
        android:layout_marginTop="@dimen/margin_34"
        android:layout_marginEnd="@dimen/margin_24"
        android:background="@drawable/circle_background"
        android:contentDescription="@string/image_profile_artist"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_spotify_full"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/albumsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albumPostImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>
